# Generated by Django 3.1.5 on 2021-02-14 20:58

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('branch', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='CommitMetaData',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('file_additions_count', models.IntegerField(default=0)),
                ('file_deletions_count', models.IntegerField(default=0)),
                ('file_modifications_count', models.IntegerField(default=0)),
                ('line_additions_count', models.IntegerField(default=0)),
                ('line_deletions_count', models.IntegerField(default=0)),
                ('line_modifications_count', models.IntegerField(default=0)),
            ],
        ),
        migrations.CreateModel(
            name='Commit',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('author_username', models.CharField(max_length=100)),
                ('hash_id', models.CharField(max_length=100)),
                ('message', models.CharField(max_length=100)),
                ('description', models.CharField(default='', max_length=400)),
                ('url', models.CharField(max_length=200)),
                ('timestamp', models.DateTimeField(auto_now_add=True)),
                ('author', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
                ('branch', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='branch.branch')),
                ('commit_meta_data', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='commit.commitmetadata')),
            ],
        ),
    ]
